k8s/01-deployment-devops.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice-shop-traditional
  namespace: juice-shop
  labels:
    app: juice-shop-traditional
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juice-shop-traditional
  template:
    metadata:
      labels:
        app: juice-shop-traditional
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: juice-shop
        image: ghcr.io/ioanabianca/tfm-juice-shop:devops-latest
        ports:
        - containerPort: 3000
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
      securityContext:
        readOnlyRootFilesystem: true
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
        
---

apiVersion: v1
kind: Service
metadata:
  name: juice-shop-traditional-service
  namespace: juice-shop
spec:
  type: NodePort
  selector:
    app: juice-shop-traditional
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080
