k8s/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice-shop-secure
  namespace: juice-shop
  labels:
    app: juice-shop-secure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juice-shop-secure
  template:
    metadata:
      labels:
        app: juice-shop-secure
    spec:
      serviceAccountName: pipeline-deployer
      imagePullSecrets:
      - name: regcred
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: juice-shop
        image: ghcr.io/ioanabianca/tfm-juice-shop:devsecops-latest
        ports:
        - containerPort: 3000
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false

---

apiVersion: v1
kind: Service
metadata:
  name: juice-shop-secure-service
  namespace: juice-shop
spec:
  type: NodePort
  selector:
    app: juice-shop-secure
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080
