k8s/03-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: juice-shop-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: juice-shop
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from: [] # Permite conexion desde el navegador
    ports:
    - protocol: TCP
      port: 3000
  egress:
  - to:
    - namespaceSelector: {} # Permite trafico DNS interno del cluster
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
